--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,3 +28,16 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
+      
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Setup node
+      uses: actions/setup-node@v3
+      
+      with:
+          node-version: 16.13.x
+          cache: npm
+
+    - name: Install
+      run: npm ci  
