--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,8 +36,8 @@ jobs:
       uses: actions/setup-node@v3
       
       with:
-          node-version: 16.13.x
+          node-version: 14
           cache: npm
 
     - name: Install
-      run: npm ci  
+      run: npm i  
