--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,10 @@ jobs:
   greet:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [14.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -36,8 +40,8 @@ jobs:
       uses: actions/setup-node@v3
       
       with:
-          node-version: 14
-          cache: npm
+        node-version: ${{ matrix.node-version }}
 
-    - name: Install
-      run: npm i  
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
