--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,6 +42,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install dependencies
+      run: npm install
