--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,7 +43,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm install
+      run: npm init 
       
     - name : node version
       run: echo "node version "
